--- a/src/style/actions/ARphoto.css
+++ b/src/style/actions/ARphoto.css
@@ -152,11 +152,6 @@
 } */
 
 
-
-
-
-
-
 .form-wrapper {
     display: flex;
     visibility: hidden;
@@ -247,7 +242,8 @@
 .form-wrapper .form-content .form_send {
     grid-area: form_send;
     padding: 60px 0 60px 60px;
-    height: 700px;
+    height: fit-content;
+    /* height: 700px; */
     /* width: max-content; */
 }
 
@@ -290,7 +286,8 @@
 .contact-form {
     width: 100%;
     height: 100%;
-    max-width: 400px;
+    /* max-width: 400px; */
+    max-width: 450px;
     position: relative;
 }
 
@@ -314,20 +311,25 @@
 }
 
 .contact-form__text .contact-form__text-list {
-    list-style: auto;
-    list-style-position: outside;
-    margin: 5px 0 10px 18px;
+    margin: 5px 0 10px 0;
+}
+
+.contact-form__text .contact-form__text-list .contact-form__text-item {
+    display: flex;
 }
 
 .contact-form__text .contact-form__text-list .contact-form__text-item:not(:last-child) {
     margin-bottom: 4px;
 }
 
+.contact-form__text .contact-form__text-list .contact-form__text-item span {
+    margin-right: 5px;
+}
+
 .random-link {
     font-family: 'MoscowSans', sans-serif;
     font-size: 1.6rem;
     line-height: 24px;
-    width: 100%;
     color: #62A744;
 }
 
@@ -645,9 +647,9 @@
     } */
 
 .contact-form__button {
-    position: absolute;
+    /* position: absolute;
     bottom: 0;
-    left: 0;
+    left: 0; */
     background: #ffffff;
     padding: 16px 24px;
     display: flex;
@@ -655,7 +657,7 @@
     justify-content: center;
     border-radius: 35px;
     border: none;
-    /* margin-top: 80px; */
+    margin-top: 40px;
     font-family: 'MoscowSans', sans-serif;
     font-size: 2rem;
     line-height: 22px;
@@ -866,6 +868,11 @@
         line-height: 21px;
     }
 
+    .contact-form__button {
+        /* position: static; */
+        margin-top: 50px;
+    }
+
     /* .competition .competition_wrapper {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(2, 1fr);
@@ -945,8 +952,8 @@
     }
 
     .contact-form__button {
-        position: static;
-        margin-top: 50px;
+        /* position: static;
+        margin-top: 50px; */
         width: 100%;
     }
 }
