--- a/src/style/style_models.css
+++ b/src/style/style_models.css
@@ -9,7 +9,7 @@
     height: 100%;
 }
 
-.BackToInnovation {
+/* .BackToInnovation {
     display: none;
     justify-content: center;
     align-items: center;
@@ -34,7 +34,7 @@
     font-family: 'MoscowSans', sans-serif;
     font-size: 16px;
     font-weight: 300;
-}
+} */
 
 
 .pulse_wrapper {
