--- a/src/style/media/media_main.css
+++ b/src/style/media/media_main.css
@@ -113,18 +113,18 @@
         "slider_button-wrapper . traffic_patrol-text-4 traffic_patrol-text-5 ."
         ". . . . ."
         /* ". traffic_patrol-no-slide-7 traffic_patrol-no-slide-7 traffic_patrol-no-slide-8 traffic_patrol-no-slide-8" */
-        "traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz";
+        /* "traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz" */
+        "traffic_patrol-slide-kamaz_NOSLIDER traffic_patrol-slide-kamaz_NOSLIDER traffic_patrol-slide-kamaz_NOSLIDER traffic_patrol-slide-kamaz_NOSLIDER traffic_patrol-slide-kamaz_NOSLIDER";
     }
 
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-new_NOSLIDER {
+    /* section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-new_NOSLIDER {
         display: none;
-    }
+    } */
 
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-7,
+    /* section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-7,
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-8 {
-        /* display: block; */
         display: none;
-    }
+    } */
 
     .title,
     section.traffic_patrol .traffic_patrol-title {
@@ -507,20 +507,18 @@
         "traffic_patrol-text-4 traffic_patrol-text-4 traffic_patrol-text-5 traffic_patrol-text-5"
         ". . . ."
         /* "traffic_patrol-no-slide-7 traffic_patrol-no-slide-7 traffic_patrol-no-slide-8 traffic_patrol-no-slide-8" */
-        "traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz";
+        /* "traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz" */
+        "traffic_patrol-slide-kamaz_NOSLIDER traffic_patrol-slide-kamaz_NOSLIDER traffic_patrol-slide-kamaz_NOSLIDER traffic_patrol-slide-kamaz_NOSLIDER";
     }
 
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-6,
-    section.traffic_patrol .traffic_patrol_grid-wrapper .slider_button-wrapper,
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-new_NOSLIDER {
+    section.traffic_patrol .traffic_patrol_grid-wrapper .slider_button-wrapper {
         display: none;
     }
 
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-7,
+    /* section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-7,
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-8 {
-        /* display: block; */
         display: none;
-    }
+    } */
 
     .title, section.traffic_patrol .traffic_patrol-title {
         font-size: 2.4rem;
@@ -924,6 +922,39 @@
 }
 
 @media (max-width: 820px) {
+    section.traffic_patrol .traffic_patrol_grid-wrapper {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, min-content);
+        grid-auto-columns: 1fr;
+        gap: 40px 20px;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "traffic_patrol-1 traffic_patrol-text-2"
+        "traffic_patrol-text-4 traffic_patrol-text-5"
+        /* "traffic_patrol-no-slide-7 traffic_patrol-no-slide-8" */
+        "InGrid InGrid"
+        "traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz";
+        /* "traffic_patrol-slide-kamaz_NOSLIDER traffic_patrol-slide-kamaz_NOSLIDER"; */
+    }
+
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz {
+        display: block;
+    }
+
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slider-buttons.InGrid {
+        display: flex;
+    }
+
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz .traffic_patrol-slider-buttons,
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz_NOSLIDER {
+        display: none;
+    }
+
+    section.traffic_patrol .traffic_patrol_slider .garage_model_card {
+        height: fit-content;
+    }
+
     section.situation_centre .situation_centre_grid-wrapper .brain_heart-2 img {
         right: -44px;
     }
@@ -997,7 +1028,7 @@
         max-height: 234px;
     }
 
-    section.traffic_patrol .traffic_patrol_grid-wrapper {
+    /* section.traffic_patrol .traffic_patrol_grid-wrapper {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, min-content);
@@ -1008,17 +1039,19 @@
         "traffic_patrol-1 traffic_patrol-text-2"
         "traffic_patrol-text-4 traffic_patrol-text-5"
         /* "traffic_patrol-no-slide-7 traffic_patrol-no-slide-8" */
-        "traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz";
-    }
+        /* "traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz" */
+        /* "traffic_patrol-slide-kamaz_NOSLIDER traffic_patrol-slide-kamaz_NOSLIDER"; */
+    /* }  */
+
 
     section.traffic_patrol .traffic_patrol-title {
         max-width: 232px;
     }
 
-    section.traffic_patrol .traffic_patrol_slider .garage_model_card {
+    /* section.traffic_patrol .traffic_patrol_slider .garage_model_card {
         max-width: 290px;
         height: 336px;
-    }
+    } */
 
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol_slider-buttons button {
         width: 64px;
@@ -1028,10 +1061,6 @@
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol_slider-buttons button img {
         width: 100%;
         height: 100%;
-    }
-
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-6 {
-        max-height: 336px;
     }
 
     section.situation_centre .situation_centre_grid-wrapper {
@@ -1682,8 +1711,6 @@
     }
 
     section.main .main_grid-wrapper .main_info-text {
-        /*font-size: 1.4rem;*/
-        /*line-height: 18px;*/
         font-size: 1.6rem;
         line-height: 22px;
     }
@@ -1724,22 +1751,34 @@
         grid-template-areas:
         "traffic_patrol-1"
         "traffic_patrol-text-mobile-1"
-        /* "traffic_patrol-slide-6" */
         "traffic_patrol-slide-kamaz"
         "traffic_patrol-text-5";
     }
 
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-text-mobile-1,
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-6 {
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-text-mobile-1 {
         display: block;
     }
 
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-text-2,
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-text-4,
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-7,
+    /* section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-7,
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-8,
-    section.traffic_patrol .traffic_patrol_grid-wrapper .slider_button-wrapper {
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-new_NOSLIDER, */
+    section.traffic_patrol .traffic_patrol_grid-wrapper .slider_button-wrapper,
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slider-buttons.InGrid {
         display: none;
+    }
+
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz {
+        position: static;
+        overflow: hidden;
+    }
+
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz .swiper-pagination1,
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaztest .swiper-paginationtest {
+        display: block;
+        margin-top: 20px;
+        text-align: center;
     }
 
     section.traffic_patrol .traffic_patrol-text-mobile-1 .traffic_patrol-text:first-child,
@@ -1747,32 +1786,15 @@
         margin-bottom: 14px;
     }
 
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-6 {
-        height: 374px;
-        max-height: none;
-
-        display: none;
-    }
-
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol_slider-wrapper {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol_slider-wrapper .traffic_patrol_slider {
         height: 336px;
     }
 
     section.traffic_patrol .traffic_patrol_slider .garage_model_card {
-        /*max-width: 336px;*/
+        max-width: 336px;
         max-width: none;
         width: 100%;
         height: 100%;
-    }
-
-    section.traffic_patrol .traffic_patrol-slide-6 .swiper-pagination {
-        display: block;
     }
 
     .swiper-pagination-bullet {
@@ -1810,7 +1832,6 @@
     }
 
     section.situation_centre .situation_centre_grid-wrapper .brain_heart-2 {
-        /*padding: 20px 30px 20px 20px;*/
         padding: 0;
         border: none;
     }
@@ -1858,7 +1879,6 @@
     }
 
     section.water_patrol .water_patrol_grid-wrapper .water_patrol_history {
-        /*padding: 20px;*/
         padding: 0;
         border: none;
     }
@@ -1883,8 +1903,6 @@
     section.water_patrol .water_patrol_grid-wrapper .water_patrol_text_2 .water_patrol-text,
     section.water_patrol .water_patrol_grid-wrapper .water_patrol_text_mobile .water_patrol-text,
     section.water_patrol .water_patrol_grid-wrapper .water_patrol_history .water_patrol_history-text {
-        /*font-size: 1.4rem;*/
-        /*line-height: 21px;*/
         font-size: 1.6rem;
         line-height: 22px;
     }
@@ -1916,9 +1934,7 @@
     section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-descr .velo_patrol_about-text {
         font-family: 'MoscowSans', sans-serif;
         color: #FFF;
-        /*font-size: 1.4rem;*/
         font-weight: 400;
-        /*line-height: 21px;*/
         font-size: 1.6rem;
         line-height: 22px;
     }
@@ -1965,17 +1981,13 @@
     }
 
     section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_text {
-        /*font-size: 1.4rem;*/
-        /*line-height: 21px;*/
         font-size: 1.6rem;
         line-height: 22px;
     }
 
     section.help_desk .help_desk_grid-wrapper .mobile_text_combo .mobile_text_combo-text {
         font-family: 'MoscowSans', sans-serif;
-        /*font-size: 1.4rem;*/
         font-weight: 400;
-        /*line-height: 21px;*/
         font-size: 1.6rem;
         line-height: 22px;
     }
@@ -2016,9 +2028,7 @@
     section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-subtitle,
     section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_title {
         font-family: 'MoscowSans', sans-serif;
-        /*font-size: 1.8rem;*/
         font-weight: 700;
-        /*line-height: 24px;*/
         font-size: 2rem;
         line-height: 26px;
     }
