--- a/src/style/style_models.css
+++ b/src/style/style_models.css
@@ -843,13 +843,14 @@ a-scene {
     background-image: url("../img/layout/pages/main/slider/moskvich.png");
 }
 
-/* .tech_spec__interior#kamaz .tech_spec__interior-wrapper {
-    background: url("../img/layout/interior_prew/kamaz_prew.png") no-repeat center/cover;
+.tech_spec__interior#kamaz .tech_spec__interior-wrapper {
+    /* background: url("../img/layout/interior_prew/kamaz_prew.png") no-repeat center/cover; */
+    background: url("../img/layout/pages/main/slider/kamaz.png") no-repeat center/cover;
 }
 
-.tech_spec__interior#moskvich.garage_kamaz .tech_spec__interior-wrapper {
+.tech_spec__interior#kamaz.garage_kamaz .tech_spec__interior-wrapper {
     background-image: url("../img/layout/pages/main/slider/kamaz.png");
-} */
+}
 
 .tech_spec__interior#velo {
     display: none;
