--- a/src/style/media/media_main.css
+++ b/src/style/media/media_main.css
@@ -359,7 +359,6 @@
 }
 
 @media (max-width: 1200px) {
-
     section.main .main_grid-wrapper {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
@@ -494,7 +493,7 @@
         max-height: 320px;
     }
 
-    section.traffic_patrol .traffic_patrol_grid-wrapper {
+    /* section.traffic_patrol .traffic_patrol_grid-wrapper {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(5, min-content);
@@ -506,19 +505,51 @@
         ". traffic_patrol-text-2 traffic_patrol-text-2 traffic_patrol-text-2"
         "traffic_patrol-text-4 traffic_patrol-text-4 traffic_patrol-text-5 traffic_patrol-text-5"
         ". . . ."
-        /* "traffic_patrol-no-slide-7 traffic_patrol-no-slide-7 traffic_patrol-no-slide-8 traffic_patrol-no-slide-8" */
-        /* "traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz" */
-        "traffic_patrol-slide-kamaz_NOSLIDER traffic_patrol-slide-kamaz_NOSLIDER traffic_patrol-slide-kamaz_NOSLIDER traffic_patrol-slide-kamaz_NOSLIDER";
+        "traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz";
     }
 
     section.traffic_patrol .traffic_patrol_grid-wrapper .slider_button-wrapper {
         display: none;
-    }
+    } */
 
     /* section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-7,
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-8 {
         display: none;
     } */
+
+    section.traffic_patrol .traffic_patrol_grid-wrapper {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, min-content);
+        grid-auto-columns: 1fr;
+        gap: 40px 20px;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "traffic_patrol-1 traffic_patrol-text-2"
+        "traffic_patrol-text-4 traffic_patrol-text-5"
+        /* "InGrid InGrid" */
+        ". ."
+        "traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz";
+    }
+
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz {
+        display: block;
+        /* overflow: hidden; */
+    }
+
+    /* section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slider-buttons.InGrid */
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz .traffic_patrol-slider-buttons {
+        display: flex;
+    }
+
+    /* section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz .traffic_patrol-slider-buttons, */
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz_NOSLIDER {
+        display: none;
+    }
+
+    section.traffic_patrol .traffic_patrol_slider .garage_model_card {
+        height: fit-content;
+    }
 
     .title, section.traffic_patrol .traffic_patrol-title {
         font-size: 2.4rem;
@@ -600,9 +631,9 @@
         height: 100%;
     }
 
-    section.traffic_patrol .traffic_patrol_slider .garage_model_card {
+    /* section.traffic_patrol .traffic_patrol_slider .garage_model_card {
         height: 280px;
-    }
+    } */
 
     section.situation_centre .situation_centre_grid-wrapper {
         display: grid;
@@ -922,38 +953,9 @@
 }
 
 @media (max-width: 820px) {
-    section.traffic_patrol .traffic_patrol_grid-wrapper {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, min-content);
-        grid-auto-columns: 1fr;
-        gap: 40px 20px;
-        grid-auto-flow: row;
-        grid-template-areas:
-        "traffic_patrol-1 traffic_patrol-text-2"
-        "traffic_patrol-text-4 traffic_patrol-text-5"
-        /* "traffic_patrol-no-slide-7 traffic_patrol-no-slide-8" */
-        "InGrid InGrid"
-        "traffic_patrol-slide-kamaz traffic_patrol-slide-kamaz";
-        /* "traffic_patrol-slide-kamaz_NOSLIDER traffic_patrol-slide-kamaz_NOSLIDER"; */
-    }
-
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz {
-        display: block;
-    }
-
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slider-buttons.InGrid {
-        display: flex;
-    }
-
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz .traffic_patrol-slider-buttons,
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz_NOSLIDER {
-        display: none;
-    }
-
-    section.traffic_patrol .traffic_patrol_slider .garage_model_card {
+    /* section.traffic_patrol .traffic_patrol_slider .garage_model_card {
         height: fit-content;
-    }
+    } */
 
     section.situation_centre .situation_centre_grid-wrapper .brain_heart-2 img {
         right: -44px;
@@ -1765,7 +1767,9 @@
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-8,
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-new_NOSLIDER, */
     section.traffic_patrol .traffic_patrol_grid-wrapper .slider_button-wrapper,
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slider-buttons.InGrid {
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz .traffic_patrol-slider-buttons
+    /* section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slider-buttons.InGrid  */
+    {
         display: none;
     }
 
