добавлены шрифты + исправлены баги при клике на кнопки и слайдер в моделе

--- a/src/style/media_models.css
+++ b/src/style/media_models.css
@@ -333,16 +333,25 @@
 
     .auto_park .auto_park_wrapper {
         height: auto;
-        padding: 20px 20px 40px 20px;
+        /* padding: 20px 20px 40px 20px; */
+        padding-bottom: 40px;
     }
 
-    .auto_park_slider-button button.prev_button {
+    .auto_park__control {
+        padding: 20px 20px 0 20px;
+    }
+
+    .auto_park_slider {
+        padding: 0 20px 0 20px;
+    }
+
+    /* .auto_park_slider-button button.prev_button {
         left: -16px;
     }
 
     .auto_park_slider-button button.next_button {
         right: -16px;
-    }
+    } */
 }
 
 @media (max-width: 440px) {
@@ -454,7 +463,16 @@
     }
 
     .auto_park .auto_park_wrapper {
-        padding: 14px 20px 34px 20px;
+        /* padding: 14px 20px 34px 20px; */
+        padding-bottom: 34px;
+    }
+
+    .auto_park__control {
+        padding: 14px 20px 0 20px;
+    }
+
+    .auto_park_slider {
+        padding: 0 20px 0 20px;
     }
 }
 
@@ -679,7 +697,8 @@
 
     .auto_park .auto_park_wrapper {
         height: auto;
-        padding: 20px 20px 30px 20px;
+        /* padding: 20px 20px 30px 20px; */
+        padding-bottom: 30px;
     }
 }
 
@@ -783,12 +802,20 @@
     }
 
     .auto_park .auto_park_wrapper {
-        padding: 10px 20px 30px 20px;
+        /* padding: 10px 20px 30px 20px; */
+        padding-bottom: 30px;
+    }
+    .auto_park__control {
+        padding: 10px 20px 10px 0;
+    }
+    
+    .auto_park_slider {
+        padding: 0 20px 0 20px;
     }
 
-    .auto_park .auto_park__control {
+    /* .auto_park .auto_park__control {
         margin-bottom: 10px;
-    }
+    } */
 }
 
 @media screen and (max-height: 320px) and (orientation:landscape) {
