конфиш без хэшей + изменены названия outfit

--- a/src/style/media_models.css
+++ b/src/style/media_models.css
@@ -421,6 +421,17 @@
     }
 }
 
+@media (max-width: 344px) {
+    .tech_spec .tech_spec__outfit .tech_spec__outfit-list .tech_spec__outfit-item .tech_spec__outfit-img {
+        height: 50px;
+        width: 56px;
+    }
+
+    .tech_spec .tech_spec__outfit .tech_spec__outfit-list .tech_spec__outfit-item .tech_spec__outfit-img img {
+        width: 38px;
+    }
+}
+
 @media screen and (max-height: 784px) {
     .tech_spec .tech_spec__description .tech_spec__description-grid_wrapper {
         gap: 14px;
