--- a/src/style/style_models.css
+++ b/src/style/style_models.css
@@ -721,6 +721,7 @@ a-scene {
     font-family: 'MoscowSans', sans-serif;
     font-weight: 300;
     font-size: 16px;
+    text-align: center;
 }
 
 .tech_spec__interior .tech_spec__interior-wrapper {
